--- a/_posts/2023-11-18-redwall.md
+++ b/_posts/2023-11-18-redwall.md
@@ -1,5 +1,9 @@
 ### Redwall, by Brian Jacques
 
+<div align="center">
+  <img src="https://bradleyculley.github.io/images/redwall.jpeg" />
+</div>
+
 _______________________________________________
 
 Read this as a kid, maybe around 1998 or so. Great book.
@@ -20,7 +24,7 @@ Unbeknownst to Jacques, someone he knew showed the manuscript to a publisher.
 
 Jacques later wrote many more books in the Redwall series. I read at least some, though don't remember which ones exactly. Perhaps, like other good series of works, the individual books can blend together.
 
-Apparently writing for an audience of blind children may have influenced the expressiveness of the book.
+Apparently, writing for an audience of blind children may have influenced the expressiveness of Redwall.
 According to Wikipedia, "He is known for the very descriptive style of his novels, which emphasize sound, smell, taste, gravity, balance, temperature, touch, and kinesthetics, not just visual sensations." [link](https://en.wikipedia.org/wiki/Brian_Jacques)
 
 As a kid I never looked into anything about the author. Turns out he was a top-shelf guy.
