--- a/_posts/2023-11-18-redwall.md
+++ b/_posts/2023-11-18-redwall.md
@@ -27,4 +27,4 @@ Jacques later wrote many more books in the Redwall series. I read at least some,
 Apparently, writing for an audience of blind children may have influenced the expressiveness of Redwall.
 According to Wikipedia, "He is known for the very descriptive style of his novels, which emphasize sound, smell, taste, gravity, balance, temperature, touch, and kinesthetics, not just visual sensations." [link](https://en.wikipedia.org/wiki/Brian_Jacques)
 
-As a kid I never looked into anything about the author. Turns out he was a top-shelf guy.
+As a kid, I never looked up the author. Turns out he was a top-shelf guy.
