--- a/_posts/2023-11-18-redwall.md
+++ b/_posts/2023-11-18-redwall.md
@@ -22,7 +22,7 @@ He was working as a milkman and met the students that way.
 He didn't actually write Redwall with plans of becoming a professional author.
 Unbeknownst to Jacques, someone he knew showed the manuscript to a publisher.
 
-Jacques later wrote many more books in the Redwall series. I read at least some, though don't remember which ones exactly. Perhaps, like other good series of works, the individual books can blend together.
+Jacques later wrote many more books in the Redwall series. I read some others...don't remember which exactly. As happens with many good serial works, the individual books blended together.
 
 Apparently, writing for an audience of blind children may have influenced the expressiveness of Redwall.
 According to Wikipedia, "He is known for the very descriptive style of his novels, which emphasize sound, smell, taste, gravity, balance, temperature, touch, and kinesthetics, not just visual sensations." [link](https://en.wikipedia.org/wiki/Brian_Jacques)
