--- a/_posts/2023-11-18-redwall.md
+++ b/_posts/2023-11-18-redwall.md
@@ -1,4 +1,4 @@
-### Redwall, by Brian Jacques
+## <div align="center">Redwall, by Brian Jacques<div>
 
 <div align="center">
   <img src="https://bradleyculley.github.io/images/redwall.jpeg" />
