--- a/_posts/2023-11-18-redwall.md
+++ b/_posts/2023-11-18-redwall.md
@@ -12,17 +12,18 @@ Perhaps in part, by virtue of being a kid at the time, there were fewer distract
 
 I think it's really Jacques' writing though. He had one in a million type of imagination, artistic vision, and literary skill.
 
-Maybe a stretch, but interesting that he and The Beatles were both artists from Liverpool.
-There are similar aesthetics and sensibilities in their art. Was recently reading this essay: http://paulgraham.com/cities.html about that kind of thing.
-Graham's essay claims the place of works largely determines the outcome of the work. The culture, ethos, and prevailing aesthetic. 
+Interesting that he and The Beatles were both artists from Liverpool, and all born around 1940. There are similar aesthetics and sensibilities in their respective works of art.
+
+Was recently reading this essay by Paul Graham: https://lnkd.in/e3Gy4GMs, about that kind of thing.
+Graham's essay claims the place in which one works largely determines the outcome of the work. The culture, ethos, and prevailing aesthetic.
 
 I read that Jacques wrote Redwall specifically for the students of Liverpool's Royal Wavertree School for the Blind.
 
 He was working as a milkman and met the students that way.
 He didn't actually write Redwall with plans of becoming a professional author.
-Unbeknownst to Jacques, someone he knew showed the manuscript to a publisher.
+Unbeknownst to Jacques, someone Jacques knew showed the manuscript to a publisher. As with the reluctant politician, perhaps the best author we can get is the reluctant author, not the seeker of fame.
 
-Jacques later wrote many more books in the Redwall series. I read some others...don't remember which exactly. As happens with many good serial works, the individual books blended together.
+Jacques later wrote many more books in the Redwall series. I read some others...don't remember which exactly. As with many good serial works, the individual books blended together.
 
 Apparently, writing for an audience of blind children may have influenced the expressiveness of Redwall.
 According to Wikipedia, "He is known for the very descriptive style of his novels, which emphasize sound, smell, taste, gravity, balance, temperature, touch, and kinesthetics, not just visual sensations." [link](https://en.wikipedia.org/wiki/Brian_Jacques)
