--- a/_posts/2023-11-18-redwall.md
+++ b/_posts/2023-11-18-redwall.md
@@ -14,7 +14,7 @@ I think it's really Jacques' writing though. He had one in a million type of ima
 
 Interesting that he and The Beatles were both artists from Liverpool, and all born around 1940. There are similar aesthetics and sensibilities in their respective works of art.
 
-Was recently reading this essay by Paul Graham: https://lnkd.in/e3Gy4GMs, about that kind of thing.
+Was recently reading this essay by Paul Graham about that kind of thing: https://lnkd.in/e3Gy4GMs.
 Graham's essay claims the place in which one works largely determines the outcome of the work. The culture, ethos, and prevailing aesthetic.
 
 I read that Jacques wrote Redwall specifically for the students of Liverpool's Royal Wavertree School for the Blind.
