--- a/_posts/2023-12-22-lost-love.md
+++ b/_posts/2023-12-22-lost-love.md
@@ -1,40 +1,30 @@
-### The Cross-Cultural Experience Part 1: Lost Love
+### Lost Love
 
 <div align="center">
   <img style="height: 80vh;" src="https://bradleyculley.github.io/images/Les-Voyagers-1.jpeg" />
   <div style="font-size: 12px; font-style: italic;">"Le Grand Van Gogh", one of "Les Voyageurs",<br/>Marseilles, France¹</div>
 </div>
-
 <p><b>Culture shock is less about what's different than about what's absent</b></p>
-
 <p>This experience makes real the seemingly tiresome academic notion that human values are culturally constructed.</p>
-
 <p>The ancient Romans practiced human sacrifice through bloodsport at The Colosseum. An estimated 400,000 people were murdered at the Colosseum in Rome, over about 350 years.² It was considered completely normal, but feels otherworldly now.</p>
-
-<p>That's one direction: things the other culture does that yours does not. More intense is what's present in your culture, but completely absent in the other. That gives rise to the experience Sigmund Freud called "lost love". For Freud, lost love could be a person, but it could even be a concept.</p>
-
+<p>That's one direction: things the other culture does that yours does not. More intense is what's present in your culture, but completely absent in the other. That gives rise to what Sigmund Freud called "[t]he loss of a love-object"³.
+For Freud, that lost love could be a person, but it could even be a concept.³
+In an essay he wrote on the topic, Freud directly mentions the loss of country/culture: "the loss of a loved person, or to the loss of some abstraction which has taken the place of one, such as one's country, liberty, an ideal, and so on".
+</p>
 <p>Maybe nobody cares about your academic credentials because it's a "tough guy" society. Or maybe it's a "Six-Pack-Joe-The-Plumber-Schmoe" society, in which the hands-on work of skilled tradespeople holds a primacy so presuppositionally sacrosanct so as to seem, quite simply, obvious.</p>
-
 <p>Baking the perfect baguette. Being a good Little League coach. Securing particular burial rites. The axioms of your childhood - those stars in the sky - while oftentimes powerful and reasonable, were cultural motifs all along. Relative truths, not absolute truths like chemistry or physics.</p>
-
 <p>The effect is a double dose. That's because anyone of reasonable intellect must conclude it's not just the cultural motifs of society A that are not, in fact, fundamental laws of the universe, but rather that neither those of A nor those of B are.</p>
-
 <p>And so, what remains?</p>
-
 <p>French sculptor Bruno Catalano was born in Morocco in 1960. With his family, he immigrated to France at the age of 10.</p>
-
 <p>He later created a series of statues titled "Les Voyageurs", which is French for "The Travelers".</p>
-
 <p>Each statue is missing a piece of their body, symbolizing the lost love of moving to a different culture.</p>
-
 <div align="center">
   <img style="height: 83vh;" src="https://bradleyculley.github.io/images/Les-Voyagers-2.jpeg" />
-  <div style="font-size: 12px; font-style: italic;">³</div>
+  <div style="font-size: 12px; font-style: italic;">⁴</div>
 </div>
-
 <br/>
-
 Sources:<br/>
-¹: [https://onlyartbronzestatue.com/product/les-voyageurs-by-french-artist-bruno-catalano-oab-bc16](https://onlyartbronzestatue.com/product/les-voyageurs-by-french-artist-bruno-catalano-oab-bc16)<br/>
-²: [https://www.thecolosseum.org/facts/](https://www.thecolosseum.org/facts/)<br/>
-³: [https://brunocatalano.com](https://brunocatalano.com)
+¹: https://onlyartbronzestatue.com/product/les-voyageurs-by-french-artist-bruno-catalano-oab-bc16<br/>
+²: https://www.thecolosseum.org/facts/<br/>
+³: http://www.columbia.edu/itc/hs/medical/clerkships/psych/misc/articles/freud.pdf<br/>
+⁴: https://brunocatalano.com
