--- a/_posts/2023-12-22-lost-love.md
+++ b/_posts/2023-12-22-lost-love.md
@@ -9,7 +9,7 @@
 <p>The ancient Romans practiced human sacrifice through bloodsport at The Colosseum. An estimated 400,000 people were murdered at the Colosseum in Rome, over about 350 years.² It was considered completely normal, but feels otherworldly now.</p>
 <p>That's one direction: things the other culture does that yours does not. More intense is what's present in your culture, but completely absent in the other. That gives rise to what Sigmund Freud called "[t]he loss of a love-object"³.
 For Freud, that lost love could be a person, but it could even be a concept.³
-In an essay he wrote on the topic, Freud directly mentions the loss of country/culture: "the loss of a loved person, or to the loss of some abstraction which has taken the place of one, such as one's country, liberty, an ideal, and so on".
+In an essay he wrote on the topic, Freud directly even directly mentions the loss of country³ (and thereby, inherently, culture).
 </p>
 <p>Maybe nobody cares about your academic credentials because it's a "tough guy" society. Or maybe it's a "Six-Pack-Joe-The-Plumber-Schmoe" society, in which the hands-on work of skilled tradespeople holds a primacy so presuppositionally sacrosanct so as to seem, quite simply, obvious.</p>
 <p>Baking the perfect baguette. Being a good Little League coach. Securing particular burial rites. The axioms of your childhood - those stars in the sky - while oftentimes powerful and reasonable, were cultural motifs all along. Relative truths, not absolute truths like chemistry or physics.</p>
@@ -26,5 +26,5 @@ In an essay he wrote on the topic, Freud directly mentions the loss of country/c
 Sources:<br/>
 ¹: https://onlyartbronzestatue.com/product/les-voyageurs-by-french-artist-bruno-catalano-oab-bc16<br/>
 ²: https://www.thecolosseum.org/facts/<br/>
-³: http://www.columbia.edu/itc/hs/medical/clerkships/psych/misc/articles/freud.pdf<br/>
+³: https://www.free-ebooks.net/psychology-culture/Mourning-and-Melancholia/pdf?dl&preview<br/>
 ⁴: https://brunocatalano.com
