--- a/_posts/2024-07-14-n-ary-life.md
+++ b/_posts/2024-07-14-n-ary-life.md
@@ -57,8 +57,8 @@ Whether to talk to that stranger who seems a bit too friendly.
 <p>
 Whether to slow down and tie your shoes before walking down the stairs.
 Every year, 12,000 people die in stairway-related accidents. -https://www.attorneywdkickham.com/stairway-staircase-accidents.html#:~:text=Consider%20these%20statistics%20from%20the,are%2012%2C000%20stairway%20accident%20deaths.
-Stairway accidents are the second leading cause of injury after motor vehicle accidents. -https://www.attorneywdkickham.com/stairway-staircase-accidents.html#:~:text=Consider%20these%20statistics%20from%20the,are%2012%2C000%20stairway%20accident%20deaths.
-Seemingly-trivial, yet in truth, consequential.
+Stairway accidents are the second leading cause of injury in the United States, second only to motor vehicle accidents. -https://www.attorneywdkickham.com/stairway-staircase-accidents.html#:~:text=Consider%20these%20statistics%20from%20the,are%2012%2C000%20stairway%20accident%20deaths.
+Seemingly-trivial; actually consequential.
 </p>
 
 <p>
@@ -72,7 +72,7 @@ What a maze!
 </p>
 
 <p>
-Intrusive thoughts, self-sabotage, fake friends...the list goes on.
+Intrusive thoughts, self-sabotage, fake friends.
 </p>
 
 <p>
@@ -80,37 +80,30 @@ All cultures I'm aware of venerate the elderly as a general principle.
 </p>
 
 <p>
-Putting aside other motivations for this veneration, an elderly person has exhibited a certain impressive technical skill.
+Putting aside other reasons to venerate the elderly, an elderly person has exhibited a certain impressive technical skill, just to get to old age.
 The ancient Greeks had a special word - technê - for practical knowledge.
 They had a separate word - epistêmê - for purely theoretical knowledge.
+String theory would be epistêmê.
+How to behave in a job interview would be technê.
 </p>
 
 <p>
-String theory would be epistêmê; how to behave in a job interview would be technê.
 Socrates, the great Greek philosopher, believed that technê - practical knowledge - is the most important kind of knowledge.
 The pinnacle of knowledge, one could say.  -https://en.wikipedia.org/wiki/Techne, or https://plato.stanford.edu/entries/episteme-techne/
 </p>
 
 <p>
-This is something I've noticed among older people in good social standing.
-Like the cage fighter who knows how to handle themselves in the cage, they may not know all manner of theory in martial arts, but they're good on the important stuff, and on what actually works. 
-</p>
-
-<p>
-An 80-year-old in good social standing has navigated an impressively large game of "life tetris".
-It really is wise to venerate them, and to learn their navigational subtleties.
+I've noticed a certain <i>practicality</i> of knowledge among older people in good social standing.
+Like the cage fighter who knows how to win a fight, they may not a lot of martial arts theory, but they're good with the important stuff, on what actually works. 
 </p>
 
 <p>
 In 2012, I was doing a work-share on a farm in New Hampshire.
 One day, one of the farmers and I were weeding a flower garden, chatting as we worked side-by-side.
-She was 68 years old, and by all measures had "won the game of life".
+She was 68 years old, and by all accounts had "won the game of life".
 </p>
 
 <p>
-She was happily married and had been for over 40 years, had three successful children (all with Ivy League university degrees), a big house, good health, and many good friends.
-A bit out of the flow of the conversation, she paused for a minute and said to me in what seemed to be a very carefully considered way, "relationships are the most important thing in life".
+She was happily married, and had been for over 40 years, she had three happy successful children (all with Ivy League degrees), a big house, good health, and good friends.
+At one point, a bit out of the flow of the conversation, she paused for a minute and said "relationships are the most important thing in life".
 </p>
-
-Sources:
-----
