--- a/_posts/2024-07-14-n-ary-life.md
+++ b/_posts/2024-07-14-n-ary-life.md
@@ -3,7 +3,7 @@
 <p>
     <div style="text-align: center; font-weight: bold; font-size: 16px;">
         Decision-making over a lifetime is traversing a giant tree of options.
-        Those who succeed are a bit like skilled craftpeople at the game of life.
+        Those who succeed are a bit like skilled craftspeople at the game of life.
     </div>
 </p>
 
@@ -58,7 +58,7 @@ Whether to talk to that stranger who seems a bit too friendly.
 Whether to slow down and tie your shoes before walking down the stairs.
 Every year, 12,000 people die in stairway-related accidents. -https://www.attorneywdkickham.com/stairway-staircase-accidents.html#:~:text=Consider%20these%20statistics%20from%20the,are%2012%2C000%20stairway%20accident%20deaths.
 Stairway accidents are the second leading cause of injury in the United States, second only to motor vehicle accidents. -https://www.attorneywdkickham.com/stairway-staircase-accidents.html#:~:text=Consider%20these%20statistics%20from%20the,are%2012%2C000%20stairway%20accident%20deaths.
-Seemingly-trivial; actually consequential.
+These decisions are seemingly trivial but actually consequential.
 </p>
 
 <p>
@@ -93,8 +93,8 @@ The pinnacle of knowledge, one could say.  -https://en.wikipedia.org/wiki/Techne
 </p>
 
 <p>
-I've noticed a certain <i>practicality</i> of knowledge among older people in good social standing.
-Like the cage fighter who knows how to win a fight, they may not a lot of martial arts theory, but they're good with the important stuff, on what actually works. 
+I've noticed a certain practicality of knowledge among older people in good social standing.
+Like the prize-winning cage fighter, they may not know a lot of martial arts theory, but they're good at the stuff that matters. 
 </p>
 
 <p>
