--- a/_posts/2024-07-14-n-ary-life.md
+++ b/_posts/2024-07-14-n-ary-life.md
@@ -3,7 +3,7 @@
 <p>
     <div style="text-align: center; font-weight: bold; font-size: 16px;">
         Decision-making over a lifetime is traversing a giant tree of options.
-        Those who succeed are a bit like skilled craftspeople at the game of life.
+        Those who succeed are like skilled craftspeople at the game of life.
     </div>
 </p>
 
@@ -67,7 +67,7 @@ As with the stairway accidents, surprisingly-many decision paths lead to really 
 
 <p>
 There's also stochasticity: random crimes, random weather events, random diseases.
-Non-smoker's lung cancer, for example.
+Non-smoker lung cancer, for example.
 What a maze!
 </p>
 
@@ -81,8 +81,8 @@ All cultures I'm aware of venerate the elderly as a general principle.
 
 <p>
 Putting aside other reasons to venerate the elderly, an elderly person has exhibited a certain impressive technical skill, just to get to old age.
-The ancient Greeks had a special word - technê - for practical knowledge.
-They had a separate word - epistêmê - for purely theoretical knowledge.
+The ancient Greeks had a special word, technê, for practical knowledge.
+They had a separate word, epistêmê, for purely theoretical knowledge.
 String theory would be epistêmê.
 How to behave in a job interview would be technê.
 </p>
@@ -94,7 +94,7 @@ The pinnacle of knowledge, one could say.  -https://en.wikipedia.org/wiki/Techne
 
 <p>
 I've noticed a certain practicality of knowledge among older people in good social standing.
-Like the prize-winning cage fighter, they may not know a lot of martial arts theory, but they're good at the stuff that matters. 
+Like the prize-winning fighter, they may not know a lot of martial arts theory, but they're good at the stuff that matters. 
 </p>
 
 <p>
