--- a/_posts/2024-07-14-n-ary-life.md
+++ b/_posts/2024-07-14-n-ary-life.md
@@ -104,6 +104,6 @@ She was 68 years old, and by all accounts had "won the game of life".
 </p>
 
 <p>
-She was happily married, and had been for over 40 years, she had three happy successful children (all with Ivy League degrees), a big house, good health, and good friends.
+She'd been happily married for over 40 years, had three successful children, a big house, good health, and good friends.
 At one point, a bit out of the flow of the conversation, she paused for a minute and said "relationships are the most important thing in life".
 </p>
