--- a/_posts/2024-07-14-n-ary-life.md
+++ b/_posts/2024-07-14-n-ary-life.md
@@ -2,7 +2,7 @@
 
 <p>
     <div style="text-align: center; font-weight: bold; font-size: 16px;">
-        Decision-making over a lifetime is traversing a giant tree of options.
+        Decision-making over a lifetime is traversing a giant tree of choices.<br/>
         Those who succeed are like skilled craftspeople at the game of life.
     </div>
 </p>
