--- a/_posts/2024-07-14-n-ary-life.md
+++ b/_posts/2024-07-14-n-ary-life.md
@@ -7,7 +7,11 @@
     </div>
 </p>
 
+<br/>
+<br/>
+
 <p>
+In particular, it's like what in computing is called an "N-ary tree".
 The "n" in "n-ary tree" refers to the maximum number of branches coming out of each node in the tree.
 </p>
 
