--- a/_posts/2024-07-14-n-ary-life.md
+++ b/_posts/2024-07-14-n-ary-life.md
@@ -30,38 +30,38 @@ A 3-ary tree:
 </p>
 
 <p>
-And an n-ary tree:
+An n-ary tree:
 <div style="text-align: center;">
   <img style="height: 30vh;" src="https://bradleyculley.github.io/images/n-Ary-tree.png" />
 </div>
 </p>
 
 <p>
-And a lifetime of decisions:
+A lifetime of decisions:
 <div style="text-align: center;">
   <img style="height: 30vh;" src="https://bradleyculley.github.io/images/n-Ary-tree-with-text.png" />
 </div>
 </p>
 
 <p>
-The sheer number of decisions one makes, between birth and death, is enormous.
+The sheer number of decisions one makes between birth and death is enormous.
 </p>
 
 <p>
-In our memories, we distill the most salient, such as choosing a spouse.
-But there are so many more that matter greatly.
-Whether to talk to that stranger who seems a bit too friendly.
+In our memories, we distill the most salient decisions, such as choosing a spouse.
+There are so many more, though, that matter greatly.
+For example, wether to talk to that stranger who seems a bit too friendly.
 </p>
 
 <p>
-"We take risks all the time when we speak to people. When we engage with someone and trust them, we are taking a risk."<br/>
--David Belle https://www.youtube.com/watch?v=NOYKME-WOZo (timestamp 8:00)
+"We take risks all the time when we speak to people. When we engage with someone and trust them, we are taking a risk."¹<br/>
+-David Belle
 </p>
 
 <p>
 Whether to slow down and tie your shoes before walking down the stairs.
-Every year, 12,000 people die in stairway-related accidents. -https://www.attorneywdkickham.com/stairway-staircase-accidents.html#:~:text=Consider%20these%20statistics%20from%20the,are%2012%2C000%20stairway%20accident%20deaths.
-Stairway accidents are the second leading cause of injury in the United States, second only to motor vehicle accidents. -https://www.attorneywdkickham.com/stairway-staircase-accidents.html#:~:text=Consider%20these%20statistics%20from%20the,are%2012%2C000%20stairway%20accident%20deaths.
+Every year, 12,000 people die in stairway-related accidents.²
+Stairway accidents are the second leading cause of injury in the United States, second only to motor vehicle accidents.²
 These decisions are seemingly trivial but actually consequential.
 </p>
 
@@ -93,7 +93,7 @@ How to behave in a job interview would be technê.
 
 <p>
 Socrates, the great Greek philosopher, believed that technê - practical knowledge - is the most important kind of knowledge.
-The pinnacle of knowledge, one could say.  -https://en.wikipedia.org/wiki/Techne, or https://plato.stanford.edu/entries/episteme-techne/
+The pinnacle of knowledge, one could say.³
 </p>
 
 <p>
@@ -111,3 +111,10 @@ She was 68 years old, and by all accounts had "won the game of life".
 She'd been happily married for over 40 years, had three successful children, a big house, good health, and good friends.
 At one point, a bit out of the flow of the conversation, she paused for a minute and said "relationships are the most important thing in life".
 </p>
+
+---
+
+Sources:
+¹: [https://www.youtube.com/watch?v=NOYKME-WOZo timestamp 8:00](youtube.com/watch?v=NOYKME-WOZo)<br/>
+²: [https://www.attorneywdkickham.com/stairway-staircase-accidents.html](https://www.attorneywdkickham.com/stairway-staircase-accidents.html)<br/>
+³: [https://plato.stanford.edu/entries/episteme-techne](plato.stanford.edu/entries/episteme-techne)
