--- a/_posts/2024-07-14-n-ary-life.md
+++ b/_posts/2024-07-14-n-ary-life.md
@@ -50,11 +50,12 @@ The sheer number of decisions one makes between birth and death is enormous.
 <p>
 In our memories, we distill the most salient decisions, such as choosing a spouse.
 There are so many more, though, that matter greatly.
-For example, wether to talk to that stranger who seems a bit too friendly.
+For example, whether to talk to that stranger who seems a bit too friendly.
 </p>
 
 <p>
-"We take risks all the time when we speak to people. When we engage with someone and trust them, we are taking a risk."¹<br/>
+"We take risks all the time when we speak to people.
+When we engage with someone and trust them, we are taking a risk."¹<br/>
 -David Belle
 </p>
 
@@ -62,11 +63,10 @@ For example, wether to talk to that stranger who seems a bit too friendly.
 Whether to slow down and tie your shoes before walking down the stairs.
 Every year, 12,000 people die in stairway-related accidents.²
 Stairway accidents are the second leading cause of injury in the United States, second only to motor vehicle accidents.²
-These decisions are seemingly trivial but actually consequential.
 </p>
 
 <p>
-As with the stairway accidents, surprisingly-many decision paths lead to really bad outcomes: death, incapacitation, imprisonment.
+As with stairway accidents, surprisingly-many decision paths lead to really bad outcomes: death, incapacitation, imprisonment.
 </p>
 
 <p>
@@ -81,10 +81,10 @@ Intrusive thoughts, self-sabotage, fake friends.
 
 <p>
 All cultures I'm aware of venerate the elderly as a general principle.
+Putting aside other reasons to venerate the elderly, an elderly person in good social standing has exhibited a certain impressive technical skill just to get to old age.
 </p>
 
 <p>
-Putting aside other reasons to venerate the elderly, an elderly person has exhibited a certain impressive technical skill, just to get to old age.
 The ancient Greeks had a special word, technê, for practical knowledge.
 They had a separate word, epistêmê, for purely theoretical knowledge.
 String theory would be epistêmê.
@@ -92,24 +92,24 @@ How to behave in a job interview would be technê.
 </p>
 
 <p>
-Socrates, the great Greek philosopher, believed that technê - practical knowledge - is the most important kind of knowledge.
+The Greek philosopher Socrates believed that technê - practical knowledge - is the most important kind of knowledge.
 The pinnacle of knowledge, one could say.³
 </p>
 
 <p>
-I've noticed a certain practicality of knowledge among older people in good social standing.
-Like the prize-winning fighter, they may not know a lot of martial arts theory, but they're good at the stuff that matters. 
+I've noticed a certain practicality of knowledge among the elderly in good social standing.
+Like the prize-winning cage fighter, they may not know a lot of martial arts theory, but they're good at what matters. 
 </p>
 
 <p>
 In 2012, I was doing a work-share on a farm in New Hampshire.
 One day, one of the farmers and I were weeding a flower garden, chatting as we worked side-by-side.
 She was 68 years old, and by all accounts had "won the game of life".
+She'd been happily married for over 40 years, had three successful children, a big house, good health, and good friends.
 </p>
 
 <p>
-She'd been happily married for over 40 years, had three successful children, a big house, good health, and good friends.
-At one point, a bit out of the flow of the conversation, she paused for a minute and said "relationships are the most important thing in life".
+At one point, a bit out of the blue, she paused for a minute and said "relationships are the most important thing in life".
 </p>
 
 ---
