--- a/_posts/2024-07-14-n-ary-life.md
+++ b/_posts/2024-07-14-n-ary-life.md
@@ -70,7 +70,7 @@ As with stairway accidents, surprisingly-many decision paths lead to really bad 
 </p>
 
 <p>
-There's also stochasticity: random crimes, random weather events, random diseases.
+There's also plain bad luck: random crimes, random weather events, random diseases.
 Non-smoker lung cancer, for example.
 What a maze!
 </p>
