--- a/_posts/2024-07-14-n-ary-life.md
+++ b/_posts/2024-07-14-n-ary-life.md
@@ -72,7 +72,6 @@ As with stairway accidents, surprisingly-many decision paths lead to really bad 
 <p>
 There's also plain randomness: random crimes, random weather events, random diseases.
 Non-smoker lung cancer, for example.
-What a maze!
 </p>
 
 <p>
@@ -81,7 +80,7 @@ Intrusive thoughts, self-sabotage, fake friends.
 
 <p>
 All cultures I'm aware of venerate the elderly as a general principle.
-Putting aside other reasons to venerate the elderly, an elderly person in good social standing has exhibited a certain impressive technical skill just to get to old age.
+Putting aside other reasons to venerate the elderly, an elderly person in good social standing has exhibited a certain technical skill just to get to old age.
 </p>
 
 <p>
