--- a/_posts/2024-07-14-n-ary-life.md
+++ b/_posts/2024-07-14-n-ary-life.md
@@ -85,7 +85,7 @@ Putting aside other reasons to venerate the elderly, an elderly person in good s
 
 <p>
 The ancient Greeks had a special word, technê, for practical knowledge.
-They had a separate word, epistêmê, for purely theoretical knowledge.
+They had a separate word, epistêmê, for theoretical knowledge.
 String theory would be epistêmê.
 How to behave in a job interview would be technê.
 </p>
