--- a/_posts/2024-07-14-n-ary-life.md
+++ b/_posts/2024-07-14-n-ary-life.md
@@ -91,24 +91,23 @@ How to behave in a job interview would be technê.
 </p>
 
 <p>
-The Greek philosopher Socrates believed that technê - practical knowledge - is the most important kind of knowledge.
-The pinnacle of knowledge, one could say.³
+The Greek philosopher Socrates believed that technê - practical knowledge - is the most important kind of knowledge.³
 </p>
 
 <p>
 I've noticed a certain practicality of knowledge among the elderly in good social standing.
-Like the prize-winning cage fighter, they may not know a lot of martial arts theory, but they're good at what matters. 
+Like the prize-winning cage fighter, they may not know a lot of martial arts theory, but they're they're good at what matters. 
 </p>
 
 <p>
 In 2012, I was doing a work-share on a farm in New Hampshire.
 One day, one of the farmers and I were weeding a flower garden, chatting as we worked side-by-side.
 She was 68 years old, and by all accounts had "won the game of life".
-She'd been happily married for over 40 years, had three successful children, a big house, good health, and good friends.
+She'd had a great career, been happily married for over 40 years, had three happy children with Ivy League degrees, had a big house, had good health, and had good friends.
 </p>
 
 <p>
-At one point, a bit out of the blue, she paused for a minute and said "relationships are the most important thing in life".
+At one point, a bit out of the blue, during our conversation, she paused for a minute and said "relationships are the most important thing in life".
 </p>
 
 ---
