--- a/_posts/2024-07-14-n-ary-life.md
+++ b/_posts/2024-07-14-n-ary-life.md
@@ -1,4 +1,4 @@
-### N-Ary Life
+### N-ary Life
 
 <p>
     <div style="text-align: center; font-weight: bold; font-size: 16px;">
@@ -11,8 +11,8 @@
 <br/>
 
 <p>
-In particular, it's like what in computing is called an "N-ary tree".
-The "n" in "n-ary tree" refers to the maximum number of branches coming out of each node in the tree.
+In particular, a lifetime of decisions is like what in computer science is called an "N-ary tree".
+The "N" in "N-ary tree" refers to the maximum number of branches coming out of each node in the tree.
 </p>
 
 <p>
@@ -30,7 +30,7 @@ A 3-ary tree:
 </p>
 
 <p>
-An n-ary tree:
+An N-ary tree:
 <div style="text-align: center;">
   <img style="height: 30vh;" src="https://bradleyculley.github.io/images/n-Ary-tree.png" />
 </div>
@@ -49,7 +49,7 @@ The sheer number of decisions one makes between birth and death is enormous.
 
 <p>
 In our memories, we distill the most salient decisions, such as choosing a spouse.
-There are so many more, though, that matter greatly.
+There are so many more important ones, though.
 For example, whether to talk to that stranger who seems a bit too friendly.
 </p>
 
@@ -60,8 +60,8 @@ When we engage with someone and trust them, we are taking a risk."¹<br/>
 </p>
 
 <p>
-Whether to slow down and tie your shoes before walking down the stairs.
-Every year, 12,000 people die in stairway-related accidents.²
+Or whether to slow down and tie your shoes before you walk down the stairs.
+12,000 people die in stairway-related accidents every year.²
 Stairway accidents are the second leading cause of injury in the United States, second only to motor vehicle accidents.²
 </p>
 
@@ -75,7 +75,7 @@ Non-smoker lung cancer, for example.
 </p>
 
 <p>
-Intrusive thoughts, self-sabotage, fake friends.
+Addiction, self-sabotage, fake friends.
 </p>
 
 <p>
