--- a/_posts/2024-07-14-n-ary-life.md
+++ b/_posts/2024-07-14-n-ary-life.md
@@ -96,14 +96,14 @@ The Greek philosopher Socrates believed that technê - practical knowledge - is 
 
 <p>
 I've noticed a certain practicality of knowledge among the elderly in good social standing.
-Like the prize-winning cage fighter, they may not know a lot of martial arts theory, but they're they're good at what matters. 
+Like the prize-winning cage fighter who focuses on the most practical martial arts, they're good at the things that really matter. 
 </p>
 
 <p>
 In 2012, I was doing a work-share on a farm in New Hampshire.
-One day, one of the farmers and I were weeding a flower garden, chatting as we worked side-by-side.
+One day, one of the farmers and I were weeding a flower garden on her farm, chatting as we worked side-by-side.
 She was 68 years old, and by all accounts had "won the game of life".
-She'd had a great career, been happily married for over 40 years, had three happy children with Ivy League degrees, had a big house, had good health, and had good friends.
+She was retired from a great career, was happily married (and had been for over 40 years), had three happy children with Ivy League degrees, and had a big house, good health, and good friends.
 </p>
 
 <p>
