--- a/_posts/2024-07-14-n-ary-life.md
+++ b/_posts/2024-07-14-n-ary-life.md
@@ -112,7 +112,7 @@ At one point during our conversation, and a bit out of the blue, she paused for 
 
 ---
 
-Sources:
+Sources:<br/>
 ¹: [https://www.youtube.com/watch?v=NOYKME-WOZo timestamp 8:00](youtube.com/watch?v=NOYKME-WOZo)<br/>
 ²: [https://www.attorneywdkickham.com/stairway-staircase-accidents.html](https://www.attorneywdkickham.com/stairway-staircase-accidents.html)<br/>
 ³: [https://plato.stanford.edu/entries/episteme-techne](plato.stanford.edu/entries/episteme-techne)
