--- a/_posts/2024-07-14-n-ary-life.md
+++ b/_posts/2024-07-14-n-ary-life.md
@@ -113,6 +113,6 @@ At one point during our conversation, and a bit out of the blue, she paused for 
 ---
 
 Sources:<br/>
-¹: [https://www.youtube.com/watch?v=NOYKME-WOZo timestamp 8:00](youtube.com/watch?v=NOYKME-WOZo)<br/>
-²: [https://www.attorneywdkickham.com/stairway-staircase-accidents.html](https://www.attorneywdkickham.com/stairway-staircase-accidents.html)<br/>
-³: [https://plato.stanford.edu/entries/episteme-techne](plato.stanford.edu/entries/episteme-techne)
+¹: [youtu.be/NOYKME-WOZo?t=478](https://youtu.be/NOYKME-WOZo?t=478)<br/>
+²: [attorneywdkickham.com/stairway-staircase-accidents.html](https://www.attorneywdkickham.com/stairway-staircase-accidents.html)<br/>
+³: [plato.stanford.edu/entries/episteme-techne](https://plato.stanford.edu/entries/episteme-techne)
