--- a/_posts/2024-07-14-n-ary-life.md
+++ b/_posts/2024-07-14-n-ary-life.md
@@ -1,4 +1,4 @@
-### N-ary Life
+### -ary Life
 
 <p>
     <div style="text-align: center; font-weight: bold; font-size: 16px;">
@@ -37,7 +37,7 @@ An N-ary tree:
 </p>
 
 <p>
-A lifetime of decisions:
+A decision in life - when meeting someone for the first time, for example:
 <div style="text-align: center;">
   <img style="height: 30vh;" src="https://bradleyculley.github.io/images/n-Ary-tree-with-text.png" />
 </div>
