--- a/_posts/2024-07-14-n-ary-life.md
+++ b/_posts/2024-07-14-n-ary-life.md
@@ -96,7 +96,7 @@ The Greek philosopher Socrates believed that technê - practical knowledge - is 
 
 <p>
 I've noticed a certain practicality of knowledge among the elderly in good social standing.
-Like the prize-winning cage fighter who focuses on the most practical martial arts, they're good at the things that really matter. 
+Like the prize-winning cage fighter who focuses on the most practical martial arts and can knock you out cold every time, they're good at what matters. 
 </p>
 
 <p>
