--- a/_posts/2023-12-22-lost-love.md
+++ b/_posts/2023-12-22-lost-love.md
@@ -7,11 +7,15 @@
 <p><b>Culture shock is less about what's different than about what's absent</b></p>
 <p>This experience makes real the seemingly tiresome academic notion that human values are culturally constructed.</p>
 <p>The ancient Romans practiced human sacrifice through bloodsport at The Colosseum. An estimated 400,000 people were murdered at the Colosseum in Rome, over about 350 years.² It was considered completely normal, but feels otherworldly now.</p>
-<p>That's one direction: things the other culture does that yours does not. More intense is what's present in your culture, but completely absent in the other. That gives rise to what Sigmund Freud called "[t]he loss of a love-object"³.
-For Freud, that lost love could be a person, but it could even be a concept.³
-In an essay he wrote on the topic, Freud directly even directly mentions the loss of country³ (and thereby, inherently, culture).
+<p>That's one direction: things the other culture does that yours does not.</p>
+<p>
+More intense is what's present in your culture, but completely absent in the other. That gives rise to what Sigmund Freud called the "loss of a love-object"³.
 </p>
-<p>Maybe nobody cares about your academic credentials because it's a "tough guy" society. Or maybe it's a "Six-Pack-Joe-The-Plumber-Schmoe" society, in which the hands-on work of skilled tradespeople holds a primacy so presuppositionally sacrosanct so as to seem, quite simply, obvious.</p>
+<p>
+For Freud, the lost love could be a person, but it could even be a deeply held concept.³
+In an essay he wrote on the topic, Freud specifically mentions the loss of country as an example of such a loss³ (and thereby, one could say, culture).
+</p>
+<p>Maybe nobody cares about your academic credentials because the new society in which you find yourself is a "tough guy" society. Or maybe it's a "Six-Pack-Joe-The-Plumber-Schmoe" society, in which the hands-on work of skilled tradespeople holds a primacy so presuppositionally sacrosanct so as to seem, quite simply, obvious.</p>
 <p>Baking the perfect baguette. Being a good Little League coach. Securing particular burial rites. The axioms of your childhood - those stars in the sky - while oftentimes powerful and reasonable, were cultural motifs all along. Relative truths, not absolute truths like chemistry or physics.</p>
 <p>The effect is a double dose. That's because anyone of reasonable intellect must conclude it's not just the cultural motifs of society A that are not, in fact, fundamental laws of the universe, but rather that neither those of A nor those of B are.</p>
 <p>And so, what remains?</p>
