--- a/_posts/2024-07-14-n-ary-life.md
+++ b/_posts/2024-07-14-n-ary-life.md
@@ -48,7 +48,7 @@ The sheer number of decisions one makes between birth and death is enormous.
 </p>
 
 <p>
-In our memories, we distill the most salient decisions, such as choosing a spouse.
+In our memories, we distill the most salient decisions. For example, choosing a spouse.
 There are so many more important ones, though.
 For example, whether to talk to that stranger who seems a bit too friendly.
 </p>
