--- a/_posts/2024-07-14-n-ary-life.md
+++ b/_posts/2024-07-14-n-ary-life.md
@@ -107,7 +107,7 @@ She was retired from a great career, was happily married (and had been for over 
 </p>
 
 <p>
-At one point during our conversation, and a bit out of the blue, she paused for a minute and said "relationships are the most important thing in life".
+At one point during our conversation, and a bit out of the blue, she paused for a minute and said to me quite deliberately "relationships are the most important thing in life".
 </p>
 
 ---
