--- a/_posts/2024-07-14-n-ary-life.md
+++ b/_posts/2024-07-14-n-ary-life.md
@@ -80,30 +80,30 @@ Addiction, self-sabotage, fake friends.
 
 <p>
 All cultures I'm aware of venerate the elderly as a general principle.
-Putting aside other reasons to venerate the elderly, an elderly person in good social standing has exhibited a certain technical skill just to get to old age.
+Besides other reasons to venerate the elderly, an elderly person in good social standing has exhibited a certain technical skill just to get to old age.
 </p>
 
 <p>
-The ancient Greeks had a special word, technê, for practical knowledge.
-They had a separate word, epistêmê, for theoretical knowledge.
-String theory would be epistêmê.
-How to behave in a job interview would be technê.
+The ancient Greeks had a special word, <i>technê</i>, for practical knowledge.
+They had a separate word, <i>epistêmê</i>, for theoretical knowledge.
+String theory would be <i>epistêmê</i>.
+How to change a car tire would be <i>technê</i>.
 </p>
 
 <p>
-The Greek philosopher Socrates believed that technê - practical knowledge - is the most important kind of knowledge.³
+The Greek philosopher Socrates believed that <i>technê</i> - practical knowledge - is the most important kind of knowledge.³
 </p>
 
 <p>
 I've noticed a certain practicality of knowledge among the elderly in good social standing.
-Like the prize-winning cage fighter who focuses on the most practical martial arts and can knock you out cold every time, they're good at what matters. 
+Like the prize-winning cage fighter who may not know the choreographed routines of karate katas, but can reliably knock people out cold, they're good at what matters. 
 </p>
 
 <p>
 In 2012, I was doing a work-share on a farm in New Hampshire.
 One day, one of the farmers and I were weeding a flower garden on her farm, chatting as we worked side-by-side.
 She was 68 years old, and by all accounts had "won the game of life".
-She was retired from a great career, was happily married (and had been for over 40 years), had three happy children with Ivy League degrees, and had a big house, good health, and good friends.
+She was retired from a great career, was happily married (and had been for over 40 years), had three happy children with Ivy League degrees, a big house, good health, and good friends.
 </p>
 
 <p>
