--- a/_posts/2023-12-22-lost-love.md
+++ b/_posts/2023-12-22-lost-love.md
@@ -2,7 +2,7 @@
 
 <div align="center">
   <img style="height: 80vh; width: auto;" src="https://bradleyculley.github.io/images/Les-Voyagers-1.jpeg" />
-  <div style="font-size: 16; font-style: italic;">"Le Grand Van Gogh", one of "Les Voyageurs",<br/>Marseilles, France¹</div>
+  <div style="font-size: 16px; font-style: italic;">"Le Grand Van Gogh", one of "Les Voyageurs",<br/>Marseilles, France¹</div>
 </div>
 <p><b>Culture shock is less about what's different than about what's absent</b></p>
 <p>This experience makes real the seemingly tiresome academic notion that human values are culturally constructed.</p>
@@ -24,7 +24,7 @@ In an essay he wrote on the topic, Freud specifically mentions the loss of count
 <p>Each statue is missing a piece of their body, symbolizing the lost love of moving to a different culture.</p>
 <div align="center">
   <img style="height: 83vh;" src="https://bradleyculley.github.io/images/Les-Voyagers-2.jpeg" />
-  <div style="font-size: 16; font-style: italic;">⁴</div>
+  <div style="font-size: 16px; font-style: italic;">⁴</div>
 </div>
 <br/>
 Sources:<br/>
