--- a/_posts/2023-12-22-lost-love.md
+++ b/_posts/2023-12-22-lost-love.md
@@ -1,7 +1,7 @@
 ### Lost Love
 
 <div align="center">
-  <img style="height: 80vh; width: auto;" src="https://bradleyculley.github.io/images/Les-Voyagers-1.jpeg" />
+  <img style="height: 80vh; width: auto; object-fit: contain;" src="https://bradleyculley.github.io/images/Les-Voyagers-1.jpeg" />
   <div style="font-size: 16px; font-style: italic;">"Le Grand Van Gogh", one of "Les Voyageurs",<br/>Marseilles, France¹</div>
 </div>
 <p><b>Culture shock is less about what's different than about what's absent</b></p>
