--- a/_posts/2024-12-26-ant.md
+++ b/_posts/2024-12-26-ant.md
@@ -1,32 +1,342 @@
 ### Ant
 
+<br/>
 
+<p style="text-align: center;">
+    <b>"The most important thing in the world is culture,<br/>because only with a good culture can we enjoy all of the good things that are available to us"</b>
+</p>
 
-<div style="text-align: center">
-<i>A poem I wrote in my final semester of high school</i><br/><br/>
-<b style="font-size: 16px;">Ant</b><br/><br/>
-             An<br/>
-       ant trips over<br/>      
-   pieces of dust, stumbles<br/>
-its way to an ant hole, carries<br/>
-  big leaves on its back, goes<br/>
-      down into darkness<br/>
-         fearlessly,<br/>
-            she<br/>
-   crawls on vertical walls,<br/>
-  headed straight to the queen,<br/>
- bequeathing her strenuous load<br/>
-  she is touched by strangers’s<br/>
-     antennae as she makes<br/>
-        her way down,<br/>
-          looking<br/>
-            up<br/>
-           only<br/>
-         once, she<br/>
-       arrives at the<br/>
-    single fertile sister<br/>
-     she envies lovingly<br/>
-       and will serve<br/>
-         ‘till she<br/>
-            dies<br/><br/>
+<br/>
+
+<div align="center">
+  <img style="width: 100%; height: 66.4268%" src="https://bradleyculley.github.io/images/Halden_Prison_Norway.png" />
+  <div style="font-size: 15px; font-style: italic;">Halden Prison in Norway¹</div>
 </div>
+
+<br/>
+
+<p>
+    I often come back to a conversation I heard years ago, between Dr. Joscha Bach, a German cognitive scientist, and the artificial intelligence model GPT-3.
+    Dr. Bach prompted GPT-3 to answer as though it were Johann Wolfgang von Goethe, the famous 18th and 19th century German intellectual.
+</p>
+
+<p>
+    <b>Bach:</b><br>
+    "The world is full of good things, and we can't experience them all.
+    We have to choose a few, and the problem is that we chose the wrong ones.
+    But then again, it's not our fault: we had no other choice."<br><br>
+    <b>Goethe:</b><br>
+    "What can we do about it? We can only change the culture."<br><br>
+    <b>Bach:</b><br>
+    "Johann, I agree. The most important thing in the world is culture, because only with a good culture can we enjoy all of the good things that are available to us."<br><br>
+    <b>Goethe:</b><br>
+    "Then let's begin to create a new culture."²
+</p>
+
+<p>
+    Click the image below to watch the whole conversation (about 4.5 minutes)<br>
+    <div align="center">
+      <a href="https://www.youtube.com/watch?v=x58FnWgCGCs" target="_blank">
+        <img src="https://bradleyculley.github.io/images/Bach_Goethe.png" style="width: 100%; height: 62.5%" />
+      </a>
+    </div>
+</p>
+
+<br/>
+
+### Culture is the key
+<p>
+    I used to think technological innovation is the key to a better society.
+    If we made a better microchip or a new medicine, things would be good.
+</p>
+
+<p>
+    Technology is of course important.
+    Only one thing has inflected the curve of human prosperity: the invention of the first commercially successful steam engine, in 1712³.
+    <div align="center">
+      <img style="width: 100%; height: 64.84%" src="https://bradleyculley.github.io/images/industrial-revolution.png" />
+      <div style="font-size: 15px; font-style: italic;">From an essay titled "There was only one industrial revolution"⁴. Good title.</div>
+    </div>
+</p>
+
+<br/>
+
+<p>
+    Later in life, I decided that technology is necessary, but not sufficient. This essay explains why.
+</p>
+
+<br/>
+
+### Green Mountain Care
+<p>
+    In March of 2011, the state of Vermont in the United States passed bill H.202, legislating a completely government-funded universal healthcare system for Vermont residents.⁵
+    The system was called "Green Mountain Care", after Vermont's nickname: "The Green Mountain State".
+</p>
+
+<p>
+    "As of January 2013, Vermont was still working out the role of Green Mountain Care and the responsibilities of the bill, as well as how to fund the program."⁵
+</p>
+
+<p>
+    A year later, the bill was dead.
+</p>
+
+<p>
+    "As of April 2014, Vermont had yet to craft a bill that would address the $2 billion in extra spending necessary to fund the single-payer system, and by the end of the year, the state abandoned their plan for universal health care, citing the taxes required of smaller businesses within the state."⁵
+</p>
+
+<p>
+    The failure of Green Mountain Care happened in the wealthiest country in the world.
+    Also, in 2014 Vermont was in the top third of states for GDP per capita⁶, and had a relatively high state income tax rate⁷.
+    Finally, there was clearly significant political will, or the bill wouldn't have materialized in the first place.
+    So what was the problem?
+</p>
+
+<p>
+    I believe the problem was entirely <i>cultural</i>. The problem wasn't logistical, economic, or even political.
+</p>
+
+<p>
+    In particular, the United States is quite <i>culturally</i> individualistic.
+    Paying for someone else's healthcare isn't individualistic.
+</p>
+
+<p>
+    I should note that individualism isn't the same as selfishness. It's more complicated than that.
+    "Per capita, Americans voluntarily donate [to charity] about seven times as much as continental Europeans.
+    Even our cousins the Canadians give to charity at substantially lower rates, and at half the total volume of an American household."⁸
+</p>
+
+<p>
+    As Oswald Spengler wrote:<br/>
+    "A people can never choose between different types of government.
+    It can choose the outer trappings of government, but not the essential thing, the spirit of government—even though public opinion constantly confuses the two.
+    What gets written into a constitution is never essential.
+    The important thing is how the instinct of the people interprets it."<br/>
+    <i>―Oswald Spengler, Prussianism and Socialism⁹</i>
+</p>
+
+<br/>
+
+### What is culture?
+<p>
+    Between 1967 and 1973, Dutch social psychologist Geert Hofstede surveyed 117,000 IBM employees across 50 countries, asking them questions to understand their worldviews.
+    The result was "<i>Hofstede's cultural dimensions theory</i>".
+    His theory assigns each country a score for each of 6 "cultural dimensions", such as the dimension of individualism versus collectivism¹⁰.
+</p>
+
+<p>
+    These are his findings for a few countries¹¹:
+</p>
+
+<div align="center">
+  <img src="https://bradleyculley.github.io/images/Hofstede_4_countries_6_dimensions.png" style="height: 49.038%; width: 100%;" />
+</div>
+
+<br/>
+
+<p>
+    As you can see, the United States has a score of 91 in the "individualism" dimension.
+    The graph only shows 4 countries, but in Hofstede's full analysis, the United States still scores <i>the highest in the world</i> in individualism.¹²
+</p>
+
+___
+
+<p>
+    Culture isn't just a phenomenon of nations.
+    There's a culture to every town, school, and interpersonal relationship.
+</p>
+
+<p>
+    Culture is often ostensibly consequentialist: "fermented food is good for you".
+</p>
+
+<p>
+    While it can have consequentialist ramifications, such as universal healthcare, it's fundamentally deontological: "This food reminds me of my childhood. It feels like home."
+</p>
+
+<p>
+    Culture is often framed through externalities: language, religion, rituals.
+    It's really like air, though: so fundamental, when you're born into it, that you don't even notice it.
+</p>
+
+<br/>
+
+### "The most important thing in the world"
+<div align="center">
+  <img src="https://bradleyculley.github.io/images/culture-is-the-root.png" style="height: 42%; width: 100%;" />
+   <div style="font-size: 15px; font-style: italic;">The root</div>
+</div>
+
+<br/>
+
+#### 1. "Only with a good culture can we enjoy all of the good things that are available to us"
+<p>
+    When I spend time with someone who grew up elsewhere and has lived for many years in the United States, I can, whether for better or worse for that particular person, feel the imprint of it on their soul. 
+</p>
+
+<p>
+    Culture is like smoke: you can't be "in it" without "getting it on you".
+</p>
+
+#### 2. Finding One's People
+<p>
+    Someone once told me about watching two firefighters throwing a baseball back and forth to each other in front of a fire station.
+    It sounded nice.
+</p>
+
+<p>
+    I've noticed that people who have found happiness in life have usually "found their people" and become part of a trusted inner circle.
+    Tenured professor, senior vice president, proud grandparent.
+    Deep alignment with a culture.
+</p>
+
+<div align="center">
+  <img src="https://bradleyculley.github.io/images/TFS_fire_equipment.jpg" style="height: 65.126%; width: 100%;" />
+  <div style="font-size: 15px; font-style: italic;">Belonging¹³</div>
+</div>
+
+<br/>
+
+#### 3. Defending Culture
+<p>
+    Culture is the most important thing in the world, so people will do most anything for it: risk imprisonment, risk their lives.
+</p>
+
+<p>
+    Communism and colonialism both usurp culture: ban religions, ban languages, erase histories.
+</p>
+
+<br/>
+
+#### 4. The Forms of Heaven
+<p>
+    The medieval French built beautiful cathedrals and chapels: physical reifications of abstract cultural motifs.
+    Ends onto themselves.
+</p>
+
+<div align="center">
+  <img src="https://bradleyculley.github.io/images/Sainte-Chapelle-3.jpg" style="height: 66.66%; width: 100%;" />
+  <img src="https://bradleyculley.github.io/images/Sainte-Chapelle-2.jpg" style="height: 66.66%; width: 100%;" />
+  <div style="font-size: 15px; font-style: italic;">The Sainte-Chapelle chapel in Paris¹⁴ ¹⁵<br/>The most beautiful chapel I've ever seen</div>
+</div>
+
+<br/>
+
+<p>
+    The average Nordic prison, too, is a reflection of certain cultural ideals.
+</p>
+
+<div align="center">
+  <img style="width: 100%; height: 66.4268%" src="https://bradleyculley.github.io/images/Halden_Prison_Norway.png" />
+  <div style="font-size: 15px; font-style: italic;">Halden Prison in Norway¹⁶</div>
+</div>
+
+<br/>
+
+<p>
+    Each manifestation of a motif, like The Sainte-Chapelle Chapel, is luminous in the reflection of its ideals.
+</p>
+
+<p>
+    Joseph Campbell called this "the hieratic pantomime, making visible on earth the forms of heaven".¹⁷
+    It's really about what heaven looks like to you.
+</p>
+
+<br/>
+
+### "We can only change the culture"
+<p>
+    As Joscha Bach says, "What can we do about it? We can only change the culture."
+</p>
+
+<p>
+    How do we change the culture?
+</p>
+
+<p>
+    The 18th century Scottish philosopher David Hume had an oddly specific answer to this: be a public intellectual.
+    Hume contrasted the academic philosopher, cloistered in an ivory tower, with the public intellectual, who spoke to the people.
+</p>
+
+<p>
+    "This is why Hume so deeply believed in the role and significance of public intellectuals.
+    These were people who, unlike university professors that Hume grew to dislike immensely had to excite a passion-based attachment to ideas, wisdom, and insight.
+    Only if they succeeded would they have the money to eat.
+    It was for this reason that they had to write well, use colorful examples, and have recourse, wit, and charm.
+    Hume's insight is that if you want to change people's beliefs, reasoning with them like a normal philosophy professor won't be the most effective strategy.
+    He's pointing out that we have to try to adjust sentiments by sympathy, reassurance, good example, encouragement, and what he called art."¹⁸
+</p>
+
+<p>
+    Public intellectuals: from Joan of Arc to Carl Sagan.
+</p>
+
+<br/>
+
+### Another Way to Change the Culture
+<p>
+    "You can't fix stupid"<br/>
+    -<i>Ron White</i>¹⁹
+</p>
+
+<p>
+    Public intellectuals can change the culture, but cultural change is often gradual; glacial, even.
+</p>
+
+<p>
+    Moreover, change is often only in a <i>sub</i>culture.
+    Many people have had the experience of a passing association with a well-organized, moral, and even pleasant institution, such as a university or a good job, followed by a jarring return to the outside world.
+</p>
+
+<p>
+    What's the solution?
+</p>
+
+<p>
+    I suggest another interpretation of "change the culture": move yourself to another culture.
+</p>
+
+<p>
+    You can do both, as well.
+    You can be a public intellectual <i>and</i> move to a culture that suits you.
+    You can often best effect change from outside the storm.
+</p>
+
+<p>
+    Lastly, this bears repeating: you can't be in it without getting it on you.
+</p>
+
+<p>
+    "He saw his ship approaching the harbour, and upon her prow the mariners, the men of his own land.<br/>
+    And his soul cried out to them, and he said:<br/>
+    Sons of my ancient mother, you riders of the tides,<br/>
+    How often have you sailed in my dreams."<br/>
+    <i>-Kahlil Gibran²⁰</i>
+</p>
+
+<br/>
+<br/>
+
+Sources:<br/>
+¹: https://www.abc.net.au/news/2022-10-05/what-are-nordic-prisons-like-criminal-justice/101481590 <br/>
+²: https://www.youtube.com/watch?v=FMfA6i60WDA <br/>
+³: https://www.thoughtco.com/history-of-steam-engines-4072565 <br/>
+⁴: https://lukemuehlhauser.com/there-was-only-one-industrial-revolution <br/>
+⁵: https://en.wikipedia.org/wiki/Vermont_health_care_reform <br/>
+⁶: https://apps.bea.gov/iTable/index.html?appid=70&stepnum=40&Major_Area=3&State=0&Area=XX&TableId=21&Statistic=3&Year=2014&YearBegin=-1&Year_End=-1&Unit_Of_Measure=levels&Rank=1&Drill=1&nRange=5 <br/>
+⁷: https://tax.vermont.gov/sites/tax/files/documents/2014IncBk-web_0.pdf (page 25 <br/>
+⁸: https://www.philanthropyroundtable.org/almanac/who-gives-most-to-charity <br/>
+⁹: https://www.goodreads.com/work/quotes/18583136-preu-entum-und-sozialismus <br/>
+¹⁰: https://en.wikipedia.org/wiki/Hofstede%27s_cultural_dimensions_theory <br/>
+¹¹: https://en.m.wikipedia.org/wiki/File:Hofstede_4_countries_6_dimensions.png <br/>
+¹²: https://clearlycultural.com/geert-hofstede-cultural-dimensions/individualism/ <br/>
+¹³: https://en.wikipedia.org/wiki/File:TFS_fire_equipment.jpg By Joshua Sherurcij <br/>
+¹⁴: https://commons.wikimedia.org/wiki/File:Sainte_Chapelle_-_Upper_level_1.jpg?uselang=fr by Benh LIEU SONG <br/>
+¹⁵: https://commons.wikimedia.org/wiki/File:Sainte_Chapelle_Interior_Stained_Glass.jpg By Oldmanisold <br/>
+¹⁶: https://www.abc.net.au/news/2022-10-05/what-are-nordic-prisons-like-criminal-justice/101481590 <br/>
+¹⁷: https://www.jcf.org/product-page/the-hero-with-a-thousand-faces-ebook (page 358) <br/>
+¹⁸: https://lmscontent.embanet.com/MVU/NURS600/Transcripts/MVU_NURS600_Hume.html <br/>
+¹⁹: [https://www.goodreads.com/author/quotes/15169.Ron_White <br/>
+²⁰: [https://www.gutenberg.org/files/58585/58585-h/58585-h.htm <br/>
+
