--- a/_posts/2024-12-22-ant.md
+++ b/_posts/2024-12-22-ant.md
@@ -3,7 +3,7 @@
 
 
 <div style="text-align: center">
-<i>A poem I wrote in my final semester of high school</i><br/><br/>
+<br/><i>A poem I wrote in my final semester of high school</i><br/><br/>
 <b style="font-size: 16px;">Ant</b><br/><br/>
              An<br/>
        ant trips over<br/>      
