--- a/_posts/2023-11-18-redwall.md
+++ b/_posts/2023-11-18-redwall.md
@@ -1,5 +1,5 @@
 ## <div align="center">Redwall<div>
-### <div align="center">by Brian Jacques</div>
+<div style="font-size: 20px; font-weight: bold;" align="center">by Brian Jacques</div>
 
 <div align="center">
   <img src="https://bradleyculley.github.io/images/redwall.jpeg" />
