--- a/_posts/2023-12-22-lost-love.md
+++ b/_posts/2023-12-22-lost-love.md
@@ -9,7 +9,8 @@
 <p>The ancient Romans practiced human sacrifice through bloodsport at The Colosseum. An estimated 400,000 people were murdered at the Colosseum in Rome, over about 350 years.² It was considered completely normal, but feels otherworldly now.</p>
 <p>That's one direction: things the other culture does that yours does not.</p>
 <p>
-More intense is what's present in your culture, but completely absent in the other. That gives rise to what Sigmund Freud called the "loss of a love-object"³.
+More intense is what's present in your culture, but completely absent in the other. That gives rise to what Sigmund Freud called the "loss of a love-object"³...a lost love.
+A lost love, of course, being the worst emotional experience a human can endure.
 </p>
 <p>
 For Freud, the lost love could be a person, but it could even be a deeply held concept.³
