--- a/_posts/2023-12-22-lost-love.md
+++ b/_posts/2023-12-22-lost-love.md
@@ -24,7 +24,7 @@ In an essay he wrote on the topic, Freud specifically mentions the loss of count
 <p>He later created a series of statues titled "Les Voyageurs", which is French for "The Travelers".</p>
 <p>Each statue is missing a piece of their body, symbolizing the lost love of moving to a different culture.</p>
 <div align="center">
-  <img style="height: 83vh;" src="https://bradleyculley.github.io/images/Les-Voyagers-2.jpeg" />
+  <img style="height: 75%; width: 100%;" src="https://bradleyculley.github.io/images/Les-Voyagers-2.jpeg" />
   <div style="font-size: 16px; font-style: italic;">⁴</div>
 </div>
 <br/>
