--- a/_posts/2023-11-18-redwall.md
+++ b/_posts/2023-11-18-redwall.md
@@ -27,6 +27,10 @@ Unbeknownst to Jacques, someone Jacques knew showed the manuscript to a publishe
 Jacques later wrote many more books in the Redwall series. I read some others...don't remember which exactly. As with many good serial works, the individual books blended together.
 
 Apparently, writing for an audience of blind children may have influenced the expressiveness of Redwall.
-According to Wikipedia, "He is known for the very descriptive style of his novels, which emphasize sound, smell, taste, gravity, balance, temperature, touch, and kinesthetics, not just visual sensations." [link](https://en.wikipedia.org/wiki/Brian_Jacques)
+According to Wikipedia, 
+
+> "He is known for the very descriptive style of his novels, which emphasize sound, smell, taste, gravity, balance, temperature, touch, and kinesthetics, not just visual sensations."
+
+[Source](https://en.wikipedia.org/wiki/Brian_Jacques)
 
 As a kid, I never looked up the author. Turns out he was a top-shelf guy.
