--- a/_posts/2025-07-19-bar-fight.md
+++ b/_posts/2025-07-19-bar-fight.md
@@ -1,13 +1,13 @@
 ### Bar Fight
 
-<p>I'm 36 years old and I've never gotten into a bar fight in which someone smashed a beer bottle over my head</p>
+<p>I'm 36 years old and I've never gotten into a bar fight in which someone smashed a beer bottle over my head.</p>
 
-<p>I've also never smashed a beer bottle over someone else's head during a bar fight</p>
+<p>I've also never smashed a beer bottle over someone else's head during a bar fight.</p>
 
-<p>I've never had someone at a bar disrespect the woman I was there with, thereby more or less obligating me to fight the individual in question</p>
+<p>I've never had someone at a bar disrespect the woman I was there with, thereby more or less obligating me to fight the individual in question.</p>
 
-<p>I've never accidentally bumped into someone at a bar, and then had them refuse to accept my apology, and then had the whole situation continue to escalate until I was more or less obligated to fight the individual in question</p>
+<p>I've never accidentally bumped into someone at a bar, and then had them refuse to accept my apology, and then had the whole situation continue to escalate until I was more or less obligated to fight the individual in question.</p>
 
-<p>I've never had someone spill their drink on me (or my female partner) at a bar, causing me to be more or less obligated to fight the drink-spiller</p>
+<p>I've never had someone spill their drink on me (or my female partner) at a bar, causing me to be more or less obligated to fight the drink-spiller.</p>
 
-<p>All of these situations I've avoided with a single technique: not going out drinking at bars</p>
+<p>All of these situations I've avoided with a single technique: not going out drinking at bars.</p>
