--- a/_posts/2025-07-19-bar-fight.md
+++ b/_posts/2025-07-19-bar-fight.md
@@ -12,4 +12,4 @@
 
 <p>I've never had someone spill their drink on me (or my female partner) at a bar, causing me to be more or less obligated to fight the drink-spiller.</p>
 
-<p>I've avoided all these situations with a single technique: not going out drinking at bars.</p>
+<p>All these situations I've avoided with a single technique: not going out drinking at bars.</p>
